wordpress/fix-wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-fixed
  namespace: wordpress
  labels:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: wordpress
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: wordpress
    app.kubernetes.io/name: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080  # Use a specific NodePort to avoid conflicts
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
      nodePort: 30443  # Use a specific NodePort to avoid conflicts
